--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "mern",
   "main": "server.js",
   "scripts": {
-    "client-install": "npm install --prefix client",
+    "client-install": "npm install cd client",
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd client && npm start",
