--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "data:import": "node seeder",
     "data:destroy": "node seeder-d",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
-  },
+  }, 
   "author": "",
   "license": "ISC",
   "proxy": "http://localhost:5000",
+  "engines": {
+    "node": "14.17.6"
+  },
   "dependencies": {
     "axios": "^0.26.0",
     "body-parser": "^1.19.1",
