--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "jquery": "^3.6.0",
     "js-cookie": "^3.0.1",
     "micro": "^9.3.4",
-    "next": "12.1.6",
+    "next": "^13.4.7",
     "nextjs-cors": "^2.1.1",
     "nookies": "^2.5.2",
-    "react": "18.1.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-cookie": "^4.1.1",
     "react-country-flag": "^3.0.2",
-    "react-dom": "18.1.0",
+    "react-dom": "18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-responsive": "^9.0.0-beta.10",
     "react-router-bootstrap": "^0.26.1",
